# AudioToGuitarPro

./: .gitignore  main.py  pyproject.toml
.github/workflows/: unittest.yml
app/: routes.py
app/core/: file_utils.py  guitarpro_file_creator.py  main.py
app/static/css/: base.css  form.css
app/static/js/: chooseFile.js  choosefile.js  dropZone.js  fileUploader.js
app/templates/: base.html  index.html
modules/: audio_analysis.py  chord_detector.py  guitarpro_file_creator.py  measure_calculator.py  measure_creator.py  tempo_detector.py
src/audiotoguitarpro/: audio_analysis.py
tests/: test_tempo_detector.py
tests/unit/: test_audio_file.py  test_guitarpro_file_creator.py  test_measure_calculator.py
