[project]
name = "audiotoguitarpro"
version = "0.1.0"
description = ""
authors = [
    {name = "killone15",email = "killzone15@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyguitarpro (>=0.9.3,<0.10.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pydub = "^0.25.1"

